--- a/app/views/start.html
+++ b/app/views/start.html
@@ -52,15 +52,12 @@
 
       <h2 class="govuk-heading-m">Before you start</h2>
 
-      <p>You can also <a href="#">register by post</a>.</p>
-
+      <p>You can also <a href="/postal-application">Apply for a licence by post</a>.</p>
       <p>The online service is also available in <a href="#">Welsh (Cymraeg)</a>.</p>
-
-      <p>You can’t register for this service if you’re in the UK illegally.</p>
 
     </div>
 
-    <div class="govuk-grid-column-one-third">
+    <!--<div class="govuk-grid-column-one-third">
 
       <aside class="app-related-items" role="complementary">
         <h2 class="govuk-heading-m" id="subsection-title">
@@ -85,7 +82,7 @@
             </li>
           </ul>
         </nav>
-      </aside>
+      </aside>-->
 
     </div>
   </div>
