updated start page content

--- a/app/views/start.html
+++ b/app/views/start.html
@@ -33,7 +33,7 @@
         {% if serviceName %} {{ serviceName }} {% endif %}
       </h1>
 
-      <p>Use this service to:</p>
+      <p>Use this service to apply for a licence to juggle in the United Kingdom of Great Britain and Northern Ireland.</p>
 
       <ul class="govuk-list govuk-list--bullet">
         <li>do something</li>
