--- a/app/views/start.html
+++ b/app/views/start.html
@@ -35,10 +35,10 @@
 
       <p>Use this service to apply for a licence to juggle in the United Kingdom of Great Britain and Northern Ireland.</p>
 
+      <p>You need a juggling licence if you intend to juggle:</p>
       <ul class="govuk-list govuk-list--bullet">
-        <li>do something</li>
-        <li>update your name, address or other details</li>
-        <li>do something else</li>
+        <li>in a public place - indoors or outdoors</li>
+        <li>with fire or knives</li>
       </ul>
 
       <p>Registering takes around 5 minutes.</p>
