Updated description to make service sound better than it really is :)

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -14,7 +14,7 @@
         <!--<span class="govuk-caption-xl">{{releaseVersion}}</span>-->
       </h1>{{releaseVersion | log }}
       <p>
-        This is a prototype of a service that allows someone to apply for a licence to juggle.
+        This is a prototype of a groundbreakingly good service that allows someone to apply for a licence to juggle.
       </p>
 
       <h2 class="govuk-heading-m">The prototype</h2>
